force-app/main/default/objects/Application__c/fields/Appplication_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Appplication_Approval_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appplication Approval Date</label>
    <type>DateTime</type>
</CustomField>