force-app/main/default/objects/Application__c/fields/Billing_Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Holder_Name__c</fullName>
    <description>Billing Account Holder Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Billing Account Holder Name</inlineHelpText>
    <label>Billing Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>