force-app/main/default/objects/Application__c/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>