force-app/main/default/objects/Application__c/fields/Billing_BSB__c.field-meta.xml
<CustomField>
    <fullName>Billing_BSB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing BSB</label>
    <length>6</length>
    <type>Text</type>
</CustomField>