force-app/main/default/objects/Application__c/fields/Payment_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Payment_Solutions__c</fullName>
    <label>Payment Solutions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>EFTPOS</fullName>
            </value>
            <value>
                <fullName>BPAY</fullName>
            </value>
            <value>
                <fullName>PayTo</fullName>
            </value>
            <value>
                <fullName>PayID</fullName>
            </value>
            <value>
                <fullName>Online Payments</fullName>
            </value>
            <value>
                <fullName>Online Card Payments</fullName>
                <isActive>false</isActive>
                <label>Online Card Payments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>