force-app/main/default/objects/Application__c/fields/Settlement_Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Account_Holder_Name__c</fullName>
    <description>Settlement Account Holder Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Settlement Account Holder Name</inlineHelpText>
    <label>Settlement Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>