force-app/main/default/objects/Application__c/fields/Settlement_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>