force-app/main/default/objects/Application__c/fields/Settlement_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Bank_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>