force-app/main/default/objects/Application__c/fields/Settlement_BSB__c.field-meta.xml
<CustomField>
    <fullName>Settlement_BSB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement BSB</label>
    <length>6</length>
    <type>Text</type>
</CustomField>